@@ -11,6 +11,8 @@ partman-auto (81) UNRELEASED; urgency=low
   * create_primary_partitions() and create_partitions() now add dm-crypt
     devices to $pv_devices when using the "crypto" method, like it is done for
     LVM.
+  * Call prepare_new_labels() before calling create_new_label().
+    Depends: partman-partitioning (>= 62)
 
  -- Jérémy Bobbio <lunar@debian.org>  Fri, 01 Aug 2008 22:49:11 +0000
 
